@@ -3,7 +3,9 @@
  */
 /**
  * @author jason
+ *  --module-path "D:\javafx-sdk-20.0.1\lib" --add-modules javafx.controls,javafx.fxml
  *
  */
 module Battleships {
+	requires javafx.controls;
 }
